@@ -4,6 +4,7 @@
   * automatically print API of redirected functions (ck <action> <module> --help)
   * improved module API printing
   * added pypi download stats
+  * fixed minor problem with "ck renew repo" - now takes already existing UID instead of generating a new one
 
 * V1.9.6
   * fixed minor bug in "ck rm" when deleting entries only from allowed repos (for crowdsourcing)
